--- a/index.html
+++ b/index.html
@@ -28,15 +28,11 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
-                    <li class="nav-item">
-                       <a class="nav-link" href="#Acerca-de-mi">Acerca de mi</a>
-                        <a class="nav-link" href="#Mis-trabajos">Trabajos</a>
-                        <a class="nav-link" href="#Contacto">Contacto</a>
-
-                    </li>
-
-                </ul>
+ <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
+  <li class="nav-item"><a class="nav-link" href="#Acerca-de-mi">Acerca de mi</a></li>
+  <li class="nav-item"><a class="nav-link" href="#Mis-trabajos">Trabajos</a></li>
+  <li class="nav-item"><a class="nav-link" href="#Contacto">Contacto</a></li>
+</ul>
 
             </div>
         </div>
