--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
                     mollitia inventore provident labore voluptatum nemo.
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+<button class="btn btn-lg btn-outline-info text-light me-4" onclick="location.href='#Mis-trabajos'">Trabajos</button>
+<button class="btn btn-lg btn-info text-light" onclick="location.href='#Contacto'">Contacto</button>
+
                 </div>
             </div>
         </div>
